refactor: centered 'api deploy banner' + refactor to use sass imports as imported styles sheet by naming convention to avoid duplication

--- a/src/app/_constants.scss
+++ b/src/app/_constants.scss
@@ -1,1 +1,9 @@
 $graviteeHeader: 140px;
+$bgColor: #333;
+$fontColor: #fafafa;
+$sidenavWidth: 200px;
+$sidenavMinWidth: 60px;
+$sidenavItemLeftWidth: 15px;
+$sidenavItemBorderSize: 4px;
+$sidenavFooterHeight: 150px;
+$sidenavHeaderHeight: 60px;
