--- a/src/app/application/details/_applications.scss
+++ b/src/app/application/details/_applications.scss
@@ -47,7 +47,7 @@
 
 .gravitee-application-header-content {
 	color: white;
-	padding-left: 20px !important;
+	padding-left: 20px;
 }
 
 .gravitee-application-header-content ng-md-icon {
