--- a/src/app/main/_main.scss
+++ b/src/app/main/_main.scss
@@ -67,8 +67,8 @@
 }
 
 .apis-box a, .apis-box a:link, .apis-box a:visited, .apis-box a:hover, .apis-box a:active {
-	text-decoration: none !important;
-  color: black !important;
+	text-decoration: none;
+  color: black;
 }
 
 .api-box .border-right {
