--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -5,8 +5,6 @@
 // bower:scss
 // endbower
 
-@import "constants";
-
 $backgroundColor: #fafafa;
 
 html {
@@ -122,19 +120,13 @@ ng-md-icon {
   top: 3px;
 }
 
-.breadcrumb {
-  margin-bottom: 0px !important;
-  padding: 0px !important;
-  background-color: transparent !important;
-}
-
 .gravitee-card:hover {
   box-shadow: 0 7px 8px -4px rgba(0, 0, 0, .2), 0 12px 17px 2px rgba(0, 0, 0, .14), 0 5px 22px 4px rgba(0, 0, 0, .12);
   z-index: 1;
 }
 
 .gravitee-add-button {
-  position: fixed !important;
+  position: fixed;
 }
 
 header {
@@ -143,7 +135,7 @@ header {
 
 .gravitee-clipboard .ng-hide:not(.ng-hide-animate) {
   visibility: collapse;
-  display: inherit !important;
+  display: inherit;
 }
 
 body {
