--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -18,8 +18,8 @@
 <section>
   <div class="gravitee-api-banner" ng-class="{'gravitee-api-banner-min': reducedMode}"
     ng-hide="apiCtrl.apiIsSynchronized || apiCtrl.apiJustDeployed" ng-cloak="">
-    <div ng-click="apiCtrl.showDeployAPIConfirm($event, apiCtrl.api)" class="gravitee-api-banner-content">
-      API out of sync, <a>deploy your API</a>
+    <div class="gravitee-api-banner-content">
+      API out of sync, <a href="" ng-click="apiCtrl.showDeployAPIConfirm($event, apiCtrl.api)">deploy your API</a>
     </div>
   </div>
 
