--- a/src/app/api/admin/events/_apiEvents.scss
+++ b/src/app/api/admin/events/_apiEvents.scss
@@ -1,3 +1,8 @@
+.api-events-timeline {
+  overflow-y: auto;
+  height: calc(100vh - 200px);
+}
+
 .timeline li timeline-badge {
   z-index: 0 !important;
 }
