--- a/src/app/api/admin/apikeys/apikeys.html
+++ b/src/app/api/admin/apikeys/apikeys.html
@@ -52,7 +52,7 @@
               <ng-md-icon ng-show="!apikey.revoked" icon="not_interested" ng-click="apiKeysCtrl.revoke(apikey.key)"></ng-md-icon>
             </span>
             <span>
-              <md-tooltip md-direction="right">Set expiration for this API Key</md-tooltip>
+              <md-tooltip md-direction="left">Set expiration for this API Key</md-tooltip>
               <ng-md-icon ng-show="!apikey.revoked" icon="schedule" ng-click="apiKeysCtrl.showExpirationModal(apikey)"></ng-md-icon>
             </span>
           </td>
