--- a/src/app/api/admin/properties/properties.html
+++ b/src/app/api/admin/properties/properties.html
@@ -16,29 +16,30 @@
 
 -->
 <form name="formApiProperties" ng-submit="apiPropertiesCtrl.update(apiPropertiesCtrl.api)" novalidate>
-  <md-data-table-container>
-    <table md-data-table class="md-primary">
-      <thead ng-if="apiPropertiesCtrl.api.properties">
-        <tr>
-          <th>Name</th>
-          <th>Value</th>
-          <th></th>
+  <md-table-container>
+    <table md-table>
+      <thead md-head ng-if="apiPropertiesCtrl.api.properties">
+        <tr md-row>
+          <th md-column>Name</th>
+          <th md-column>Value</th>
+          <th md-column></th>
         </tr>
       </thead>
-      <tbody>
-        <tr ng-repeat="(key, value) in apiPropertiesCtrl.api.properties">
-          <td>{{key}}</td>
-          <td>
+      <tbody md-body>
+        <tr md-row ng-repeat="(key, value) in apiPropertiesCtrl.api.properties">
+          <td md-cell>{{key}}</td>
+          <td md-cell>
             <md-input-container class="flex">
-              <input ng-model="value" type="text" ng-required="true">
+              <input ng-model="apiPropertiesCtrl.api.properties[key]" type="text" ng-required="true" aria-label="Property value">
             </md-input-container>
-          <td>
+          <td md-cell>
             <ng-md-icon ng-click="apiPropertiesCtrl.deleteProperty(key)" icon="delete" size="24" style="cursor: pointer;"></ng-md-icon>
           </td>
         </tr>
       </tbody>
     </table>
-  </md-data-table-container>
+  </md-table-container>
+
   <div ng-if="apiPropertiesCtrl.api.properties" class="md-actions gravitee-api-save-button" layout="row">
     <md-button class="md-accent" type="submit" ng-disabled="formApiProperties.$invalid">
       Save
