--- a/src/app/api/_api.scss
+++ b/src/app/api/_api.scss
@@ -146,3 +146,17 @@
 .inset .gravitee-api-general-tabs {
   margin: -10px;
 }
+
+.hint {
+  /* Position the hint */
+  position: absolute;
+  left: 2px;
+  right: auto;
+  bottom: -5px;
+  /* Copy styles from ng-messages */
+  font-size: 12px;
+  line-height: 14px;
+  transition: all 0.3s cubic-bezier(0.55, 0, 0.55, 0.2);
+  /* Set our own color */
+  color: grey;
+}
