--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<form name="formApi" ng-submit="generalCtrl.update(apiCtrl.api)" novalidate>
+<form name="formApi" ng-submit="generalCtrl.update(generalCtrl.api)" novalidate>
   <md-tabs class="gravitee-api-general-tabs" md-dynamic-height md-border-bottom>
     <md-tab label="General">
         <div layout="column" layout-wrap layout-gt-sm="row">
@@ -30,7 +30,7 @@
 
           <div layout="column" flex="20">
             <md-input-container>
-              <md-radio-group ng-model="apiCtrl.api.visibility">
+              <md-radio-group ng-model="generalCtrl.api.visibility">
                 <md-radio-button class="gravitee-api-visibility" value="public" aria-label="Public">
                   <md-tooltip md-direction="bottom">Public: API is visible by all</md-tooltip>
                   <ng-md-icon icon="public"></ng-md-icon>
@@ -47,7 +47,7 @@
             </md-input-container>
           </div>
           <md-switch ng-model="apiEnabled"
-                     ng-change="generalCtrl.changeLifecycle(apiCtrl.api.id)" flex="20" no-dirty-check>
+                     ng-change="generalCtrl.changeLifecycle(generalCtrl.api.id)" flex="20" no-dirty-check>
             Started
           </md-switch>
         </div>
@@ -55,14 +55,14 @@
         <div layout="" layout-sm="column">
           <md-input-container class="flex">
             <label>Description *</label>
-            <textarea ng-model="apiCtrl.api.description" required></textarea>
+            <textarea ng-model="generalCtrl.api.description" required></textarea>
           </md-input-container>
         </div>
 
         <div layout="" layout-sm="column">
           <md-input-container class="flex">
             <label>Deployment tags</label>
-            <md-chips ng-model="apiCtrl.api.tags" placeholder="Enter a tag" secondary-placeholder="+Tag" ng-click="formApi.$setDirty()"></md-chips>
+            <md-chips ng-model="generalCtrl.api.tags" placeholder="Enter a tag" secondary-placeholder="+Tag" ng-click="formApi.$setDirty()"></md-chips>
           </md-input-container>
         </div>
     </md-tab>
@@ -71,7 +71,7 @@
         <div layout-gt-sm="row">
           <md-input-container class="md-block" flex-gt-sm>
             <label>Gateway context path *</label>
-            <input ng-model="apiCtrl.api.proxy.context_path" type="text" ng-pattern="/^\/[\/.a-zA-Z0-9-]+$/" required>
+            <input ng-model="generalCtrl.api.proxy.context_path" type="text" ng-pattern="/^\/[\/.a-zA-Z0-9-]+$/" required>
           </md-input-container>
         </div>
 
@@ -81,45 +81,80 @@
               <legend><ng-md-icon icon="filter_tilt_shift"></ng-md-icon> Endpoints</legend>
             </v-pane-header>
             <v-pane-content>
+                  <md-subheader class="md-primary" style="background-color: #fafafa">Servers</md-subheader>
+                  <md-table-container>
+                    <table md-table  md-row-select="true" ng-model="selected">
+                      <thead md-head md-order="order">
+                        <tr md-row>
+                          <th md-column md-order-by="target"><span>Target</span></th>
+                          <th md-column md-order-by="weight" md-numeric hide-gt-xs show-gt-sm><span>Weight</span></th>
+                          <th md-column>
+                            <md-button class="md-icon-button" aria-label="Add endpoint" ng-click="generalCtrl.addEndpoint($event)">
+                              <ng-md-icon icon="add"></ng-md-icon>
+                            </md-button>
+                            <md-button class="md-icon-button" aria-label="Remove endpoint" ng-click="generalCtrl.removeEndpoints($event)" ng-show="selected.length">
+                              <ng-md-icon icon="delete"></ng-md-icon>
+                            </md-button>
+                          </th>
+                        </tr>
+                      </thead>
+                      <tbody md-body>
+                        <tr md-row md-select="endpoint" md-select-id="{{endpoint.target}}" md-auto-select ng-repeat="endpoint in generalCtrl.api.proxy.endpoints | orderBy: weight">
+                          <td md-cell ng-click="generalCtrl.editEndpoint($event, endpoint)" ng-class="{'md-placeholder': !endpoint.target}">{{endpoint.target}}</td>
+                          <td md-cell hide-gt-xs show-gt-sm ng-click="generalCtrl.editWeight($event, endpoint)" ng-class="{'md-placeholder': !endpoint.weight}">{{endpoint.weight}}</td>
+                          <td md-cell></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </md-table-container>
 
-              <md-table-container>
-                <table md-table  md-row-select="true" ng-model="selected">
-                  <thead md-head md-order="order">
-                    <tr md-row>
-                      <th md-column md-order-by="target"><span>Target</span></th>
-                      <th md-column md-order-by="weight" md-numeric hide-gt-xs show-gt-sm><span>Weight</span></th>
-                      <th md-column>
-                        <md-button class="md-icon-button" aria-label="Add endpoint" ng-click="generalCtrl.addEndpoint($event)">
-                          <ng-md-icon icon="add"></ng-md-icon>
-                        </md-button>
-                        <md-button class="md-icon-button" aria-label="Remove endpoint" ng-click="generalCtrl.removeEndpoints($event)" ng-show="selected.length">
-                          <ng-md-icon icon="delete"></ng-md-icon>
-                        </md-button>
-                      </th>
-                    </tr>
-                  </thead>
-                  <tbody md-body>
-                    <tr md-row md-select="endpoint" md-select-id="{{endpoint.target}}" md-auto-select ng-repeat="endpoint in apiCtrl.api.proxy.endpoints | orderBy: weight">
-                      <td md-cell ng-click="generalCtrl.editEndpoint($event, endpoint)" ng-class="{'md-placeholder': !endpoint.target}">{{endpoint.target}}</td>
-                      <td md-cell hide-gt-xs show-gt-sm ng-click="generalCtrl.editWeight($event, endpoint)" ng-class="{'md-placeholder': !endpoint.weight}">{{endpoint.weight}}</td>
-                      <td md-cell></td>
-                    </tr>
-                  </tbody>
-                </table>
-              </md-table-container>
 
-              <br />
+                <br /><md-divider></md-divider>
 
-              <div layout-gt-sm="row">
-                <md-input-container class="md-block" flex-gt-sm>
-                  <label>Load-Balancing Algorithm</label>
-                  <md-select ng-model="apiCtrl.api.proxy.load_balancing.type">
-                    <md-option ng-repeat="lb in lbs" value="{{lb.value}}">
-                      {{lb.name}}
-                    </md-option>
-                  </md-select>
-                </md-input-container>
-              </div>
+                  <md-subheader class="md-primary" style="background-color: #fafafa">Load balancing</md-subheader>
+                  <div layout-gt-sm="row">
+                    <md-input-container class="md-block" flex-gt-sm>
+                      <label>Algorithm</label>
+                      <md-select ng-model="generalCtrl.api.proxy.load_balancing.type">
+                        <md-option ng-repeat="lb in lbs" value="{{lb.value}}">
+                          {{lb.name}}
+                        </md-option>
+                      </md-select>
+                    </md-input-container>
+                  </div>
+
+                <br /><md-divider></md-divider>
+
+                  <md-subheader class="md-primary" style="background-color: #fafafa">Fail-over</md-subheader>
+                  <div layout="column" layout-wrap layout-gt-sm="row">
+                    <div flex-xs flex="50">
+                      <md-input-container class="md-block" flex-gt-sm>
+                        <md-checkbox
+                          ng-model="generalCtrl.failoverEnabled"
+                          aria-label="Enable failover"
+                          class="md-align-top-left" flex>
+                          Enable failover
+                        </md-checkbox>
+                        <div class="hint">When gateway receives a connect timeout from backend servers, it redirects traffic to the next server until "max attempts" or "timeout" have been reached.</div>
+                      </md-input-container>
+                    </div>
+                  </div>
+                  <div layout="column" layout-wrap layout-gt-sm="row">
+                    <div flex-xs flex="50">
+                      <md-input-container class="md-block" flex-gt-sm>
+                        <label>Max attempts *</label>
+                        <input ng-model="generalCtrl.api.proxy.failover.maxAttempts" type="number" ng-required="generalCtrl.failoverEnabled" min="0" ng-disabled="!generalCtrl.failoverEnabled">
+                        <div class="hint">Limits the number of possible tries for passing a request to the next server. <br/>The 0 value turns off this limitation.</div>
+                      </md-input-container>
+                    </div>
+                    <div flex-xs flex="50">
+                      <md-input-container class="md-block" flex-gt-sm>
+                        <label>Timeout (ms) *</label>
+                        <input ng-model="generalCtrl.api.proxy.failover.retryTimeout" type="number" min="0" ng-required="generalCtrl.failoverEnabled" ng-disabled="!generalCtrl.failoverEnabled">
+                        <div class="hint">Limits the time allowed to pass a request to the next server. <br/>The 0 value turns off this limitation.</div>
+                      </md-input-container>
+                    </div>
+                  </div>
             </v-pane-content>
           </v-pane>
 
@@ -132,25 +167,25 @@
                 <div flex-xs flex="50">
                   <md-input-container flex-xs flex="50">
                     <label>Connect timeout (ms)*</label>
-                    <input ng-model="apiCtrl.api.proxy.http.configuration.connectTimeout" type="number" required min="0">
+                    <input ng-model="generalCtrl.api.proxy.http.configuration.connectTimeout" type="number" required min="0">
                   </md-input-container>
                 </div>
                 <div flex-xs flex="50">
                   <md-input-container flex-xs flex="50">
                     <label>Read timeout (ms)*</label>
-                    <input ng-model="apiCtrl.api.proxy.http.configuration.readTimeout" type="number" required min="0">
+                    <input ng-model="generalCtrl.api.proxy.http.configuration.readTimeout" type="number" required min="0">
                   </md-input-container>
                 </div>
                 <div flex-xs flex="50">
                   <md-input-container flex-xs flex="50">
                     <label>Idle timeout (ms)*</label>
-                    <input ng-model="apiCtrl.api.proxy.http.configuration.idleTimeout" type="number" required min="0">
+                    <input ng-model="generalCtrl.api.proxy.http.configuration.idleTimeout" type="number" required min="0">
                   </md-input-container>
                 </div>
                 <div flex-xs flex="50">
                   <div layout-xs="column" flex-xs="50">
                     <md-checkbox
-                      ng-model="apiCtrl.api.proxy.http.configuration.keepAlive"
+                      ng-model="generalCtrl.api.proxy.http.configuration.keepAlive"
                       aria-label="Enable keep-alive"
                       class="md-align-top-left" flex>
                       Enable keep-alive<br/>
@@ -161,7 +196,7 @@
                   </div>
                   <div layout-xs="column" flex-xs="50">
                     <md-checkbox
-                      ng-model="apiCtrl.api.proxy.http.configuration.dumpRequest"
+                      ng-model="generalCtrl.api.proxy.http.configuration.dumpRequest"
                       aria-label="Dump HTTP Client request"
                       class="md-warn md-align-top-left" flex>
                       Dump HTTP request<br/>
@@ -184,7 +219,7 @@
                 <div flex-xs flex="50">
                   <div layout-xs="column" flex-xs="100">
                     <md-checkbox
-                      ng-model="apiCtrl.api.proxy.http.ssl.enabled"
+                      ng-model="generalCtrl.api.proxy.http.ssl.enabled"
                       aria-label="Enable SSL"
                       class="md-align-top-left" flex>
                       Enable client SSL<br/>
@@ -197,7 +232,7 @@
                 <div flex-xs flex="50">
                   <div layout-xs="column" flex-xs="100">
                     <md-checkbox
-                      ng-model="apiCtrl.api.proxy.http.ssl.trustAll"
+                      ng-model="generalCtrl.api.proxy.http.ssl.trustAll"
                       aria-label="Enable trust all"
                       class="md-warn md-align-top-left" flex>
                       Enable trust all<br/>
@@ -211,7 +246,7 @@
                 <div flex-xs flex="50">
                   <md-input-container flex="50">
                     <label>PEM certificate</label>
-                    <textarea ng-model="apiCtrl.api.proxy.http.ssl.pem"></textarea>
+                    <textarea ng-model="generalCtrl.api.proxy.http.ssl.pem"></textarea>
                   </md-input-container>
                 </div>
               </div>
@@ -228,7 +263,7 @@
     <md-button class="md-raised md-primary" type="button" ng-click="generalCtrl.reset()" ng-disabled="formApi.$invalid || formApi.$pristine">
       Reset
     </md-button>
-    <md-button class="md-raised md-warn pull-right" type="button" ng-click="generalCtrl.delete(apiCtrl.api.id)" ng-disabled="apiCtrl.api.state === 'started'">
+    <md-button class="md-raised md-warn pull-right" type="button" ng-click="generalCtrl.delete(generalCtrl.api.id)" ng-disabled="generalCtrl.api.state === 'started'">
       Delete
     </md-button>
   </div>
