fix(generalAPI): update API name and version

--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -21,11 +21,11 @@
         <div layout="column" layout-wrap layout-gt-sm="row">
           <md-input-container flex="30">
             <label>Name *</label>
-            <input ng-model="apiCtrl.api.name" type="text" required>
+            <input ng-model="generalCtrl.api.name" type="text" required>
           </md-input-container>
           <md-input-container flex="30">
             <label>Version *</label>
-            <input ng-model="apiCtrl.api.version" type="text" required>
+            <input ng-model="generalCtrl.api.version" type="text" required>
           </md-input-container>
 
           <div layout="column" flex="20">
