fix(login-icon): replace logout icon by login icon

--- a/src/app/components/sidenav/sidenav.html
+++ b/src/app/components/sidenav/sidenav.html
@@ -49,10 +49,10 @@
       <hr>
       <md-list-item>
         <a href="#" ng-click="sidenavCtrl.showLoginModal($event)" ng-if="!authenticated">
-          <ng-md-icon icon="logout"></ng-md-icon> <span ng-if="!reducedMode">Login</span>
+          <ng-md-icon icon="login"></ng-md-icon> <span ng-if="!reducedMode">Login</span>
         </a>
         <a href="#" ng-click="sidenavCtrl.logout()" ng-if="authenticated">
-          <ng-md-icon icon="login"></ng-md-icon> <span ng-if="!reducedMode">Sign out</span>
+          <ng-md-icon icon="logout"></ng-md-icon> <span ng-if="!reducedMode">Sign out</span>
         </a>
       </md-list-item>
       <md-list-item>
