feat: allows to export a JSON file which contains the definition of an API and to import it to update an API, or import to create. This closes #115.

--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -16,6 +16,25 @@
 
 -->
 <form name="formApi" ng-submit="generalCtrl.update(generalCtrl.api)" novalidate>
+  <md-menu class="gravitee-api-menu-action">
+    <md-button aria-label="API actions" class="md-icon-button" ng-click="$mdOpenMenu($event)">
+      <ng-md-icon md-menu-origin="" icon="more_vert"></ng-md-icon>
+    </md-button>
+    <md-menu-content width="2">
+      <md-menu-item>
+        <md-button aria-label="Export definition" ng-click="generalCtrl.export(generalCtrl.api.id)">
+          <ng-md-icon icon="file_upload"></ng-md-icon>
+          Export
+        </md-button>
+      </md-menu-item>
+      <md-menu-item>
+        <md-button aria-label="Import definition" ng-click="generalCtrl.showImportDialog()">
+          <ng-md-icon icon="file_download"></ng-md-icon>
+          Import
+        </md-button>
+      </md-menu-item>
+    </md-menu-content>
+  </md-menu>
   <md-tabs class="gravitee-api-general-tabs" md-dynamic-height md-border-bottom>
     <md-tab label="General">
       <div layout="column" layout-wrap layout-gt-sm="row">
@@ -28,22 +47,34 @@
           <input ng-model="generalCtrl.api.version" type="text" required>
         </md-input-container>
 
-        <div layout="column" flex="20">
-          <md-input-container>
-            <md-radio-group ng-model="generalCtrl.api.visibility">
-              <md-radio-button class="gravitee-api-visibility" value="public" aria-label="Public">
-                <md-tooltip md-direction="bottom">Public: API is visible by all</md-tooltip>
-                <ng-md-icon icon="public"></ng-md-icon>
-              </md-radio-button>
-              <md-radio-button class="gravitee-api-visibility" value="private" aria-label="Private">
-                <md-tooltip md-direction="bottom">Private: API is visible only by its members</md-tooltip>
-                <ng-md-icon icon="lock"></ng-md-icon>
-              </md-radio-button>
-              <md-radio-button class="gravitee-api-visibility" value="restricted" aria-label="Restricted">
-                <md-tooltip md-direction="bottom">Restricted: API is visible by all but can be used only by its members</md-tooltip>
-                <ng-md-icon icon="vpn_lock"></ng-md-icon>
-              </md-radio-button>
-            </md-radio-group>
+          <div layout="column" flex="20">
+            <md-input-container>
+              <md-radio-group ng-model="generalCtrl.api.visibility">
+                <md-radio-button class="gravitee-api-visibility" value="public" aria-label="Public">
+                  <md-tooltip md-direction="bottom">Public: API is visible by all</md-tooltip>
+                  <ng-md-icon icon="public"></ng-md-icon>
+                </md-radio-button>
+                <md-radio-button class="gravitee-api-visibility" value="private" aria-label="Private">
+                  <md-tooltip md-direction="bottom">Private: API is visible only by its members</md-tooltip>
+                  <ng-md-icon icon="lock"></ng-md-icon>
+                </md-radio-button>
+                <md-radio-button class="gravitee-api-visibility" value="restricted" aria-label="Restricted">
+                  <md-tooltip md-direction="bottom">Restricted: API is visible by all but can be used only by its members</md-tooltip>
+                  <ng-md-icon icon="vpn_lock"></ng-md-icon>
+                </md-radio-button>
+              </md-radio-group>
+            </md-input-container>
+          </div>
+          <md-switch ng-model="apiEnabled" ng-disabled="generalCtrl.api.deployed_at == null"
+                     ng-change="generalCtrl.changeLifecycle(generalCtrl.api.id)" flex="10" no-dirty-check>
+            Started
+          </md-switch>
+        </div>
+
+        <div layout="" layout-sm="column">
+          <md-input-container class="flex">
+            <label>Description *</label>
+            <textarea ng-model="generalCtrl.api.description" required></textarea>
           </md-input-container>
         </div>
         <md-switch ng-model="apiEnabled" ng-disabled="generalCtrl.api.deployed_at == null"
@@ -66,7 +97,6 @@
         </md-input-container>
       </div>
     </md-tab>
-
     <md-tab label="Gateway">
       <div layout-gt-sm="row">
         <md-input-container class="md-block" flex-gt-sm>
