--- a/src/app/api/_api.scss
+++ b/src/app/api/_api.scss
@@ -160,3 +160,10 @@
   /* Set our own color */
   color: grey;
 }
+
+.gravitee-api-menu-action {
+  padding-top: 0;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+}
